compiler/tests/safety/fail/arm-m4/bad_align2.jazz
export
fn main(reg u32 pt) -> reg u32 {
  reg u32 tmp, i;

  i = 0;
  while (i < 16) {
    /* Question: Does this fail because [i] is not a multiple of 32? */
    tmp = [:u32 pt + i];
    i += 1;
  }
  
  return tmp;
}
